# logl

./: LogL.agda  Makefile  README  install.bash  logl.cabal  minimal_pg_contention_example.hs  package-tools.bash  pg_multithreaded_contention.hs  pg_walkthrough.hs  postgres.sql  sharded_demo.hs  yaml_api.bnf
Language/LogL/: Accounting.hs  Backend.hs  FlatYAML.hs  Frontend.hs  Interpret.hs  Interpreter.hs  Macros.hs  PG.hs  PGConninfo.hs  Pickle.hs  PlainYAML.hs  Server.hs  Syntax.hs  Tag.hs  Threether.hs  UUID.hs  YAML.hs
Language/LogL/Control/Failure/: Either.hs
experiments/: sharded_demo.hs
html/: hello.html
notes/: binomial-terms-for-uptime  invariants  roadmap
notes/authorization-and-accounting/: README  htpasswd  nginx.conf
postgresql/: sample_data.sql  stored_procedures.sql
servers/: snap.hs  warp.hs
sql/: postgres_table_setup.sql  sqlite.ddl.sql
sqlite/: ddl.sql  tasks.sql
walkthrough/: README  connections.sql  server.hs
